# alibaba-llm-ai-runtime

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
knowledge/source/: platform-overview.md  support-assistant.md
quality/: golden_cases.json
scripts/: run_quality.py  smoke_container.sh
src/alibaba_llm_ai_runtime/: app.py  config.py  llm.py  observability.py  quality.py  retrieval.py  schemas.py  service.py  sessions.py  tools.py
tests/: test_health.py  test_llm.py  test_observability.py  test_quality.py  test_retrieval.py  test_runtime.py  test_sessions.py  test_tools.py
